force-app/main/default/objects/nPortal__Route_Terms__c/nPortal__Route_Terms__c.object-meta.xml
<CustomObject>
    <description>--DEPRECATED-- A junction between a UI Route and a Document which causes the document to be listed for agreement on an Online Application in Customer Portal.</description>
    <label>-D Route Terms</label>
    <nameField>
        <label>Route Terms Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Route Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>