force-app/main/default/objects/nPortal__Route_Terms__c/fields/nPortal__Agreement_Text__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Agreement_Text__c</fullName>
    <description>This text is displayed along with a link to the document specified. String token {0} should be used to specify the position of the link.</description>
    <label>Agreement Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>