force-app/main/default/objects/nPortal__Route_Terms__c/fields/nPortal__Document__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Document__c</fullName>
    <description>Salesforce Id of the Document which will be displayed on a given Route in Online Applications</description>
    <inlineHelpText>Enter the Salesforce ID of the Document you wish to display for agreement on a particular Route in an Online Application.</inlineHelpText>
    <label>Document</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>