force-app/main/default/objects/nPortal__Route_Terms__c/fields/nPortal__Route__c.field-meta.xml
<CustomField>
    <fullName>nPortal__Route__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Maps to a UI Route. The selected Document will be displayed on this Route.</description>
    <inlineHelpText>UI Route which will display this document on an Online Application</inlineHelpText>
    <label>Route</label>
    <referenceTo>nFORCE__Route__c</referenceTo>
    <relationshipLabel>Route Terms</relationshipLabel>
    <relationshipName>Route_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>